Fix for clipping of logi

--- a/css/custom.css
+++ b/css/custom.css
@@ -28,3 +28,7 @@ a {
 .logo {
   max-width: 90%;
 }
+
+h1, h2, h3, h4, h5, h6, p, a, div {
+  font-family: "Lato";
+}
